# win_task_manager

./: Cargo.toml  README.md  build.rs
resources/: task_manager.rc  video.wmv
src/: main copy.rs  main.rs
